--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,10 +17,11 @@ jobs:
         submodules: recursive
 
     - name: Build stage 1
-      run: make -C stage1 FW=900 clean && make -C stage1 FW=900
+      run: |
+        make -C stage1 FW=900 clean && make -C stage1 FW=900
     
     - name: Build stage 2
-      run: make -C stage2 FW=900 clean && make -C stage1 FW=900
+      run: make -C stage2 FW=900 clean && make -C stage2 FW=900
 
     - uses: actions/upload-artifact@v4
       with:
