--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        version: [700, 701, 702, 750, 751, 755, 800, 801, 803, 850, 852, 900, 903, 904, 950, 951, 960, 1000, 1001, 1050, 1070, 1071, 1100]
+        version: [700, 701, 702, 750, 751, 755, 800, 801, 803, 850, 852, 900, 903, 904, 950, 951, 960, 1000, 1001, 1100]
 
     runs-on: ubuntu-latest
 
